Updating jar